--- a/_css/index.css
+++ b/_css/index.css
@@ -4,8 +4,8 @@ body{
 	font-family: "游ゴシック";
 	font-size: 20px;
 	font-weight: bold;
-	background-color: #666;
-	color: #fff;
+	background-color: #eff;
+	color: #000;
 }
 
 header,
